test_vectors/nfl_packet_verify_v1/positive/packet_0537effea5f535d061b313f72e37ca52d4a34fff00865066c51fa7dff410618a/payload/repo_snapshot/repo_root/tools/pwsh/40_admin_grant_credits.ps1
#requires -Version 7.0
[CmdletBinding()]
param(
  [Parameter(Mandatory=$true)][ValidateNotNullOrEmpty()][string]$OrgId,
  [Parameter(Mandatory=$true)][long]$DeltaCredits,
  [Parameter(Mandatory=$true)][ValidateNotNullOrEmpty()][string]$Reason
)

Set-StrictMode -Version Latest
$ErrorActionPreference = "Stop"

. (Join-Path $PSScriptRoot "05_http.ps1")
. (Join-Path $PSScriptRoot "00_env.ps1")

$bodyObj = @{
  p_org_id            = $OrgId
  p_delta_credits     = $DeltaCredits
  p_reason            = $Reason
  p_operator_user_id  = $global:GI_PPI_OPERATOR_USER_ID
}

$jsonBody = ($bodyObj | ConvertTo-Json -Depth 20)

Invoke-GiPpiJson -Uri $global:GI_PPI_RPC_ADMIN_GRANT_CREDITS_URI -Headers $global:GI_PPI_HEADERS_SERVICE -JsonBody $jsonBody
